--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			gtag("config", "G-XR0TFDH597");
 		</script>
 		<title>Nott-A-Thon: Lovelaceeeee456789</title>
-		/*gggggg*/
+		/*helllllllllooooo*/
 		<meta charset="utf-8" />
 		<meta name="icon" content="" />
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon_Black/apple-touch-icon.png" />
