--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -12,10 +12,7 @@
 
 			gtag("config", "G-XR0TFDH597");
 		</script>
-
-		<title>Nott-A-Thon: Lovelaceeeee456789</title>
-		/*helllllllllooooo*/
-
+		<title>Nott-A-Thon: Turing</title>
 		<meta charset="utf-8" />
 		<meta name="icon" content="" />
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon_Black/apple-touch-icon.png" />
@@ -46,6 +43,7 @@
 	</head>
 	<body>
 		<nav class="all">
+			<img class="wave-edit" src="wave.png">
 			<div class="menu">
 				<button aria-expanded="false" aria-controls="menu-list">
 					<div id="bar1"></div>
@@ -59,7 +57,7 @@
 						><img src="nott.jpg" alt="University of Nottingham Malaysia"
 					/></a>
 				</div>
-				<a class="name" href="#nottathon">Nott-A-Thon: Lovelace</a>
+				<a class="name" href="#nottathon">Nott-A-Thon: Turing</a>
 				<a class="rules" href="officialrules.html">Official Rules</a>
 				<a class="contributor" href="contributor.html">Contributors</a>
 				<a class="faqs" href="faq.html">FAQs</a>
@@ -69,8 +67,8 @@
 			</div>
 			<div class="main">
 				<div class="content">
-					<p id="line1">2 H<span>ours</span></p>
-					<p id="line2">Algorithms Challenge</p>
+					<p id="line1">Nott-A-Thon: Lovelace</p>
+					<p id="line2">2 Hours Algorithms Challenges</p>
 					<p id="line3">Presented by IET UNM Student Chapter</p>
 					<p id="line4">30th of January 2021</p>
 					<p id="line5">hosted on HackerRank</p>
@@ -80,20 +78,17 @@
 						onclick="googleform()"
 						title="CLick me to sign up in the google form"
 					>
-						Click here to view the result
+					<span>Register Now</span>
 					</button>
 				</div>
-				<div class="progPic"><img src="progpicture2.png" alt="Programming dude" style="object-fit:cover; height:75%;"/>
-	
-				
-				</div>
+				<div class="progPic"><img src="new_pic/hacker_white.png" alt="Programming dude" /></div>
 			</div>
 			<div class="countdown">
-				<h2 class="topicCountdown">Challenges Solutions</h2>
+				<!--<h2 class="topicCountdown">Challenges Solutions</h2>
 				<h3 class="topicCountdown">The competition is over, hope to see you next year!</h3>
 
-				<a class="solution" href="NottAThonTuringSolution.zip" download>Click here to download the solution</a>
-				<!-- <div class="time">
+				<a class="solution" href="NottAThonTuringSolution.zip" download>Click here to download the solution</a>-->
+				<div class="time">
 					<div class="day">
 						<p id="day">00</p>
 						<br /><span id="label">Days</span>
@@ -113,11 +108,12 @@
 						<p id="sec">00</p>
 						<br /><span id="label">Seconds</span>
 					</div>
-				</div> -->
+				</div> 
 				<div id="nottathon"></div>
 			</div>
 
-			<div class="nottathon">
+			<div class="nottathon container-about">
+				
 				<div class="about">
 					<h5>About</h5>
 					<p id="detailcontent">
@@ -129,6 +125,10 @@
 						be awarded after the contest.
 					</p>
 				</div>
+			</div>
+			
+
+			<div class="nottathon container-intro">
 				<div class="introduction">
 					<h5>Get familiar with <br />HackerRank environment</h5>
 					<p id="detailcontent">
@@ -137,26 +137,32 @@
 					</p>
 					<button id="mockcontest" onclick="openMockTest()">Mock Contest</button>
 				</div>
+			</div>
+
+			<div class="nottathon container-prize">
 				<div class="prize">
 					<h5>Prizes</h5>
 					<div id="detailcontent">
 						<div class="second">
-							<img src="/pic/Trophy Icons Silver.png" alt="Silver Trophy" />
+							<img src="pic/Trophy Icons Silver.png" alt="Silver Trophy" />
 							<h6>1st Runner Up</h6>
 							<p>RM 60 cash<br />RM 100 Printcious <br />E-vouchers</p>
 						</div>
-						<div class="first">
-							<img src="/pic/Trophy Icons Gold.png" alt="Gold Trophy" />
+						<div class="first glow">
+							<img src="pic/Trophy Icons Gold.png" alt="Gold Trophy" />
 							<h6>Champion</h6>
 							<p>RM 120 cash<br />RM 200 Printcious <br />E-vouchers</p>
 						</div>
 						<div class="third">
-							<img src="/pic/Trophy Icons Bronze.png" alt="Bronze Trophy" />
+							<img src="pic/Trophy Icons Bronze.png" alt="Bronze Trophy" />
 							<h6>2nd Runner Up</h6>
 							<p>RM 30 cash<br />RM 50 Printcious <br />E-vouchers</p>
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<div class="nottathon container-detail">
 				<div class="detail">
 					<h5>Time and Platform</h5>
 					<p>
@@ -166,8 +172,9 @@
 					</p>
 				</div>
 			</div>
+			
 			<div class="cprt">
-				<p>© 2022 IET UNM. All Rights Reserved.</p>
+				<p>© 2021 IET UNM. All Rights Reserved.</p>
 			</div>
 		</nav>
 
