--- a/officialrules.html
+++ b/officialrules.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -73,7 +73,7 @@
 			</div>
 
 			<div class="cprt">
-				<p>© 2022 IET UNM. All Rights Reserved.</p>
+				<p>© 2021 IET UNM. All Rights Reserved.</p>
 			</div>
 		</nav>
 		<script src="index.js"></script>
